--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,7 @@
     <title>Main User Page</title>
 </head>
 <body>
-    <h1>Users</h1>
-    <a href="adduser.html">Add User</a>
-    <div id="users-container"></div>
-    <script src="js/script.js"></script>
+    <h1>HomePage</h1>
+    <a href="/login">Log in to site</a>
 </body>
 </html>
